// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in <SearchScreen/> Should return an error if the hereo was not found. 1`] = `
<div
  className="row"
>
  <div
    className="col-md-5"
  >
    <h4>
      Search Screen
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find a hero"
        type="text"
        value="myhero"
      />
      <div
        className="d-grid gap-2"
      >
        <button
          className="btn mt-2 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
  <div
    className="col-md-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-warning"
    >
      There is no hero with the searched name 
      <strong>
        "
        myhero
        "
      </strong>
    </div>
  </div>
</div>
`;

exports[`Tests in <SearchScreen/> Should show Batman and the input with the value of the queryString 1`] = `
<div
  className="row"
>
  <div
    className="col-md-5"
  >
    <h4>
      Search Screen
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find a hero"
        type="text"
        value="batman"
      />
      <div
        className="d-grid gap-2"
      >
        <button
          className="btn mt-2 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
  <div
    className="col-md-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="card"
    >
      <div
        className="row g-0"
      >
        <div
          className="col-md-4"
        >
          <img
            alt="Batman"
            className="card-img rounded-0"
          />
        </div>
        <div
          className="col-md-6"
        >
          <div
            className="card-body"
          >
            <h5
              className="card-title"
            >
              Batman
            </h5>
            <h6
              className="card-subtitle mb-2 text-muted"
            >
              DC Comics
            </h6>
            <p
              className="card-text"
            >
              <small>
                Bruce Wayne
              </small>
            </p>
            <a
              className="align-text-bottom"
              href="/hero/dc-batman"
              onClick={[Function]}
            >
              More...
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests in <SearchScreen/> Should show properly with default values 1`] = `
<div
  className="row"
>
  <div
    className="col-md-5"
  >
    <h4>
      Search Screen
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find a hero"
        type="text"
        value=""
      />
      <div
        className="d-grid gap-2"
      >
        <button
          className="btn mt-2 btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
  <div
    className="col-md-7"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-info"
    >
      Search a hero
    </div>
  </div>
</div>
`;
